--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/styles.min.css">
     <link rel="stylesheet" href="css/queries.css">
-    <link rel="stylesheet" href="js/animate.min.css">
-    <link rel="stylesheet" href="js/font-awesome.min.css">
+    <link rel="stylesheet" href="js/animate.min.css"> 
+    <link rel="stylesheet" href="js/font-awesome.min.css"> 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body id="top">
@@ -95,8 +95,8 @@
                 <h3 class="header">Engagement Pics</h3>
             </div>
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/DSC03616.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -106,7 +106,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/DSC03619.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -116,7 +116,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/DSC03626.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -126,7 +126,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R309078.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -136,7 +136,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/DJI_0049.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -146,7 +146,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/DJI_0055.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -156,10 +156,9 @@
                     </div>
                 </a>
             </div>
-        
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7M305494.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -169,7 +168,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7M305555.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -179,7 +178,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7M305564.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -189,7 +188,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7M305585.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -199,7 +198,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307266.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -209,7 +208,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307453.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -220,8 +219,8 @@
                 </a>
             </div>
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307858.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -231,7 +230,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307884.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -241,7 +240,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308110.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -251,7 +250,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308431.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -261,7 +260,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308433.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -271,7 +270,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308484.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -282,8 +281,8 @@
                 </a>
             </div>
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307680.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -293,7 +292,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R307757.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -303,7 +302,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308335.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -313,7 +312,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308343.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -323,7 +322,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308568.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -333,7 +332,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308646.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -344,8 +343,8 @@
                 </a>
             </div>
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308501.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -355,7 +354,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308366.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -365,7 +364,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308694_1.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -375,7 +374,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308776.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -385,7 +384,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308791_1.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -395,7 +394,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308971.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -406,8 +405,8 @@
                 </a>
             </div>
         </div>
-        <div class="row eng-pic-row">
-            <div class="col-md-2">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308831.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -417,7 +416,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308898.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -427,7 +426,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308903.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -437,7 +436,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R308922.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -447,7 +446,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R309149.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -457,7 +456,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/big/7R309070.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
