--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     </section>
     <div class="container">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
                 <div class="hero-content text-center">
                     <img src="img/logo-lg.png">
                     <!--<p class="intro">Hannah & Andrew are getting hitched!</p>-->
@@ -88,7 +88,7 @@
     </div>
 </section>
 
-<section id="eng-pics" class="section-padding">
+<section id="eng-pics" class="section-padding eng-pics">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -605,7 +605,7 @@
     </div>
 </section>
 
-<section id="gifts" class="section-padding">
+<section class="gifts section-padding" id="gifts">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
