--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement Pics</h3>
+                <h3 class="header">Engagement</h3>
+                <p>
+                    Duck poop and bikes and jumping.
+                </p>
             </div>
         </div>
         <div class="row">
