a couple more text layout tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
                             <li><a href="#events">Other Events</a></li>
                             <li><a href="#travel">Travel</a></li>
                             <li><a href="#gifts">Gifts</a></li>
+                            <li><a href="#faq">FAQ</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -583,12 +584,12 @@
     </div>
 </section>
 
-<section class="rsvp text-center" id="rsvp">
+<section class="faq text-center" id="faq">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>Please RSVP!</h3>
-                <p>Do it now.</p>
+                <h3>FAQ</h3>
+                <p>Please RSVP. Do it now.</p>
             </div>
         </div>
     </div>
