fixed styles for FAQ

--- a/public/index.html
+++ b/public/index.html
@@ -588,8 +588,24 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>FAQ</h3>
+                <h3>Frequenty Asked Questions</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+                <h4>sdf sdf s dfs fdsdf sdf s dfs dfsd fSome first questions</h4>
+                <p>With totally chill answer</p>
+
+                <h4>Some first questions</h4>
+                <p>With totally chill answer</p>
+            </div>
+          
+            <div class="col-md-5 col-md-offset-1">
+                <h4>Other question over heraf a fsda dfs afds afsa fdsa fdsa fda fdse dog</h4>
                 <p>Please RSVP. Do it now.</p>
+
+                <h4>Some first questions</h4>
+                <p>With totally chill answer</p>
             </div>
         </div>
     </div>
