added some text content

--- a/public/index.html
+++ b/public/index.html
@@ -72,17 +72,33 @@
     <div class="down-arrow floating-arrow"><a href="#intro"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
-<section id="intro">
+<section id="intro" class="section-padding intro">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">About Hannah and Andrew</h3>
+                <h3 class="header">About Us - From Andrew's Perspective</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-left">
                 <p>
-                    I first saw Hannah at Somacentral doin' stuff.
+                    I met Hannah one fateful Saturday night in April, 2011. I was working late at SOMACentral,
+                    a coworking space in San Francisco, on a side project called RandTxt. My project was
+                    supposed to be the “Chatroulette for text messages”, but before I started writing code
+                    I wanted to talk to some potential users. I wandered the halls looking for other people
+                    who were staying late, and found Hannah huddled at her desk working too.
+                </p>
+                <p>
+                    I had seen Hannah before, as I had to pass her desk each day to get to my office, but I
+                    had never spoken to her before. So I walked over, sat down next to her, and asked “Hey,
+                    do you like to talk to strangers?”. “Why yes I do!” she replied.
+                </p>
+                <p>
+                    We became fast friends due to our shared love of McDonalds and Safeway soup, and we
+                    started dating a little over a year later. Over the years, our relationship has grown
+                    in so many ways -- from our first hike to Bass Lake, to our (her) first cat
+                    (Hermes, in 2012), to our first trip together (to Hawaii! In 2013). We bonded over
+                    our shared love of good food, good friends, and pineapples. 
                 </p>
             </div>
         </div>
@@ -90,12 +106,67 @@
 </section>
 
 <section id="eng-pics" class="section-padding eng-pics">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement</h3>
+                <h3 class="header">Engagement - From Hannah's Perspective</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-left">
                 <p>
-                    Duck poop and bikes and jumping.
+                    Andrew had invited me on bike ride and picnic dinner,
+                    on an otherwise uneventful Wednesday night. Little did
+                    I know the bike ride would change our lives forever.
+                <br/><br/>
+                    The ride itself started off a bit odd. It was further
+                    than we usually went (especially on crummy gBikes) and
+                    much smellier due to the flocks of seabirds.
+                <br/><br/>
+                    Andrew led us along the bumpy, non-paved road, and had
+                    us stop right by the Pelican Nesting View. After taking a
+                    whiff, he quickly suggested we continue biking. When we
+                    escaped the smell of waterfowl, we stopped and Andrew
+                    laid out a picnic blanket and dinner.
+                <br/><br/>
+                    We had dinner and I was pretty cold so I began to pack up
+                    quickly, but Andrew wasn’t as eager to leave and asked if
+                    I would like dessert. My answer was obvious. 
+                <br/><br/>
+                    He brought out four desserts including two fortune cookies.
+                    I grabbed a cookie and cracked it open. It read, “Will you marry me?” 
+                <br/><br/>
+                    In the briefest second I thought to myself, “This is a weird fortune.”
+                    I looked over and Andrew was down on one knee with a box open and in it,
+                    a beautiful ring.
+                <br/><br/>
+                    I didn’t know what to say so I said the most Hannah thing possible…
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 intro-convo">
+                <div class="intro-left">“Is this for real?”</div>
+                <br /> <br />
+                <div class="intro-right">“Yes”</div>
+                <br /><br />
+                <div class="intro-left">”How did you do that?!” </div>
+                <br /> <br />
+                <div class="intro-right">“I don’t think that’s relevant”</div>
+                <br /> <br />
+                <div class="intro-right">“So…??”</div>
+                <br /><br />
+                <div class="intro-left">“Of course yes!”</div>
+                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-left">
+                <p>
+                        <br />
+                    When I look back on our engagement, what stands out is the love, joy,
+                    humor,and excitement I felt that night. I couldn’t imagine spending
+                    the rest of my life with anyone else.
                 </p>
             </div>
         </div>
