added travel info

--- a/public/index.html
+++ b/public/index.html
@@ -635,10 +635,53 @@
 <section id="travel" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center">
-                <h3>Travel info</h3>
-                <p>sfsfd</a>
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-left">
+                <h3>Travel Info</h3>
+                <p>We’re so excited to share this special time with you and would love you to join us for
+                    festivities from Thursday, January 23rd through Saturday, January 25th.
+                    <br />
+                    <i>Family members: please plan to arrive by Tuesday evening, January 21st.</i>
                 </p>
+
+                <h5>Flights</h5>
+                <p>
+                    Oahu’s major airport is Daniel K. Inouye International Airport (HNL) in Honolulu.
+                    Most transpacific flights land here whether from the mainland or other countries.
+                </p>
+                <h5>Hotel</h5>
+                <p style="padding-bottom: 0px;">
+                    We have a block of rooms reserved at the Courtyard by Marriott Oahu North Shore
+                    from Jan 23rd through Jan 26th with special rates for the following options:
+                </p>
+                    <ul class="b-list">
+                        <li>Two queen beds - $219/night</li>
+                        <li>One king with pullout - $229/night</li>
+                    </ul>
+                <p>
+                    Note that the shuttle will pick up and drop off from here and the other events will be held in this area.
+                    If you are booking different accommodations we recommend staying nearby.
+                </p>
+
+                <h5>Transportation</h5>
+                <p>
+                    We’ll organize shuttles for the ceremony, reception, and after party.
+                    Lyft and Uber are available on the island but we’d recommend renting a car if you’re doing your own day trips.
+                </p>
+
+                <h5>Activities on Oahu</h5>
+                Here are some fun things that Hannah and Andrew enjoy doing in Oahu
+
+                <ul class="b-list">
+                    <li><a href="https://www.doleplantation.com/">Dole Plantation</a> - Pineapples!</li>
+                    <li><a href="https://atlantisadventures.com/">Submarine tour</a></li>
+                    <li><a href="https://www.pearlharborhistoricsites.org/">Pearl Harbor Historic Sites</a></li>
+                    <li><a href="https://hanaumabaystatepark.com/">Hanauma bay</a> - Incredible snorkeling</li>
+                    <li><a href="https://goo.gl/maps/z77Pw8hZ3oZQsSzQ9">Kailua beach</a> - sand, waves, windsurfing, and kitesurfing</li>
+                    <li><a href="https://sailingcat.com/cruises-n-snorkeling/">Sailing</a></li>
+                    <li><a href="https://www.thrillist.com/lifestyle/honolulu/waterfall-hikes-oahu-hawaii">Hike to a waterfall</a></li>
+                    <li><a href="https://paradisecopters.com/">Ride a helicopter</a></li>
+                    <li><a href="https://www.atlasobscura.com/search?utf8=✓&q=oahu&lat=21.4389123&lng=-158.00005650000003">Other points of interest from Atlas Obscura</a></li>
+                </ul>
             </div>
         </div>
     </div>
