fixed some wording

--- a/public/index.html
+++ b/public/index.html
@@ -705,8 +705,10 @@
                 <h5>Share a Picture</h5>
                 <p>
                     We ask that each of our guests share a picture of them with Hannah or Andrew or both.
-                    Please share the picture(s) by adding it to our Google Photos album or emailing:
-                    handrewlee.2020@gmail.com
+                    Please share the picture(s) by adding it to our
+                    <a href="https://photos.app.goo.gl/zeKiM59xX7L5CMmw6">Google Photos album</a>
+                    or emailing:
+                    <a href="mailto:handrewlee.2020@gmail.com">handrewlee.2020@gmail.com</a>
                     The photos will be shown during the reception
                 </p>
                 <h5>Charities</h5>
@@ -718,7 +720,7 @@
                     <li><a href="http://innovatinghealthinternational.org">Innovating Health International</a> - Andrew was in Haiti for a volunteer trip when
                         the major earthquake hit in 2010. He experienced the devastation first hand and has a special
                         place in his heart for the people of Haiti. You can read more about his experience on his blog
-                        at <a href="https://startupandrew.com/">startupandrew.com</a>.
+                        at <a href="https://startupandrew.com/posts/my-experiences-in-the-haitian-earthquake/">startupandrew.com</a>.
                         IHI was founded by our friend, Dr. Vincent DeGennero, whose mission is to detect and treat
                         breast and cervical cancer in Haiti.</li>
                     <li><a href="http://awf.org">African Wildlife Foundation</a> - Hannah would like to put her love for animals and the environment to action through support of the African
@@ -730,7 +732,7 @@
                         meeting the local people was a humbling experience and grew our awareness and love for all lifeforms in this
                         part of the world.</li>
                     <li><a href="http://projectwren.com">Project Wren</a> - We’re grateful for your attendance at our wedding and want to be conscientious of the environmental impact
-                        of travel. Consider donating to Project Wren to offset your carbon footprint and help make the earth a
+                        of travel. Consider using Project Wren to offset your carbon footprint and help make the earth a
                         little greener.</li>
                     <li><a href="https://voting.works/">VotingWorks</a> - VotingWorks is working to make elections more secure by building better, more open, and more secure voting
                         machines. We believe this is important for maintaining trust in our democracy.</li>
@@ -798,7 +800,7 @@
 
                 <h4>What is the Activity Day dress code?</h4>
                 <p>Bring your swim trunks and your flippy floppies to the picnic and
-                    appropriate clothing for the activity of your choice.</p>
+                    appropriate clothing for the activity of your choice. We'll share more details about Activity Day soon.</p>
 
                 <h4>Weather</h4>
                 <p>Oahu in January is very pleasant, with temperatures usually ranging
