--- a/public/index.html
+++ b/public/index.html
@@ -708,7 +708,7 @@
                     Please share the picture(s) by adding it to our
                     <a href="https://photos.app.goo.gl/zeKiM59xX7L5CMmw6">Google Photos album</a>
                     or emailing:
-                    <a href="mailto:handrewlee.2020@gmail.com">handrewlee.2020@gmail.com</a>
+                    <a href="mailto:handrewlee.2020@gmail.com">handrewlee.2020@gmail.com</a>.
                     The photos will be shown during the reception
                 </p>
                 <h5>Charities</h5>
