--- a/public/index.html
+++ b/public/index.html
@@ -662,7 +662,7 @@
                         <li>One king with pullout - $229/night</li>
                     </ul>
                 <p>
-                    <b>PLEASE <a href="https://www.marriott.com/events/start.mi?id=1572030859530&key=GRP"></a>USE THIS LINK TO BOOK YOUR HOTEL</a> AND GET THE DISCOUNT.</b>
+                    <b>PLEASE <a href="https://www.marriott.com/events/start.mi?id=1572030859530&key=GRP">USE THIS LINK TO BOOK YOUR HOTEL</a> AND GET THE DISCOUNT.</b>
                     <br />
                     Note that the shuttle will pick up and drop off from here and the other events will be held in this area.
                     If you are booking different accommodations we recommend staying nearby.
