--- a/public/index.html
+++ b/public/index.html
@@ -756,7 +756,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>Frequenty Asked Questions</h3>
+                <h3>Frequently Asked Questions</h3>
             </div>
         </div>
         <div class="row">
