more wording updates

--- a/public/index.html
+++ b/public/index.html
@@ -565,7 +565,7 @@
                         <br />
                         Our wedding will be held at the Paliku Gardens at Kualoa Ranch, about 40 minutes outside of Honolulu.
                     </p>
-                    <h5>Shuttle Pickup | <span class="time">3:00 PM</span></h5>
+                    <h5>Shuttle Pickup | <span class="time">2:45 PM</span></h5>
                     <p>Shuttles will pick up in front of the <a href="https://www.marriott.com/hotels/travel/hnloa-courtyard-oahu-north-shore/">
                         Courtyard by Marriott Oahu North Shore.</a>
                     </p>
@@ -573,8 +573,11 @@
                     <h5>Ceremony | <span class="time">4:00 PM</span></h5>
                     <h5>Cocktail Hour & Photos | <span class="time">4:30 PM</span></h5>
                     <h5>Reception & Dancing | <span class="time">6:00 PM</span></h5>
-                    <h5>After Party | <span class="time">11:00 PM</span></h5>
-                    <p>Join us for more dancing and shenanigans at the after party! Location TBA.</p>
+                    <h5>After Party | <span class="time">11:00 PM - 2:00 AM</span></h5>
+                    <p>Join us for more dancing and shenanigans at the after party!</br>
+                        A shuttle will pick up from the reception and take us to the Beach House Sports Bar & Grill. 
+                        Only guests 21+ may attend.                        
+                    </p>
 
                 </div>
             </div>
@@ -623,14 +626,14 @@
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center">
                 <div class="wp4">
                     <p><strong>Saturday, January 25th, 2020</strong></p>
-                    <h5>Activity Day | <span class="time">9:00 AM - 5:00 PM</span></h5>
+                    <h5>Beach Activity Day | <span class="time">9:00 AM - 5:00 PM</span></h5>
                     <p>Enjoy another day with us, including traditional
                         Vietnamese food for Lunar New Year, island fair, and
-                        fun beach activities including kayaking, boat rides,
+                        fun beach activities including swimming, kayaking, boat rides,
                         volleyball, and lounging.</p>
-                    <p>Activity day will be held at <a href="https://goo.gl/maps/YBdEFcTBpuUBSZRMA">Secret Island</a> at Kualoa Ranch. 
+                    <p>Beach Activity Day will be held at <a href="https://goo.gl/maps/YBdEFcTBpuUBSZRMA">Secret Island</a> at Kualoa Ranch. 
                         The island is available starting at 9 AM if you would
-                        like to get the party started early. Hannah and Andrew will arrive around 11 AM.</p>
+                        like to get the party started early, but feel free to sleep in and join later as well. Hannah and Andrew will arrive around 11 AM.</p>
                 </div>
             </div>
         </div>
@@ -684,6 +687,7 @@
                 Here are some fun things that Hannah and Andrew enjoy doing in Oahu
 
                 <ul class="b-list">
+                    <li><a href="https://www.kualoa.com/toursactivities/">Kualoa Ranch</a> - The area where we’re getting married also has Ziplining, ATV Tours, UTV tours, and other fun activities.</li>
                     <li><a href="https://www.doleplantation.com/">Dole Plantation</a> - Pineapples!</li>
                     <li><a href="https://atlantisadventures.com/">Submarine tour</a></li>
                     <li><a href="https://www.pearlharborhistoricsites.org/">Pearl Harbor Historic Sites</a></li>
@@ -802,7 +806,7 @@
                 <p>Dress code for the day trip is island-casual. Think dresses, shorts,
                     and comfortable shoes for walking.</p>
 
-                <h4>What is the Activity Day dress code?</h4>
+                <h4>What is the Beach Activity Day dress code?</h4>
                 <p>Bring your towel, swim trunks and your flippy floppies to enjoy a day at the beach.
                 There will be kayaking, boat rides, snorkeling, volleyball, ping pong, and of course, lounging.</p>
 
@@ -820,7 +824,7 @@
                 <h4>Is there a wedding hashtag?</h4>
                 <p>Please use #HappiLeeEverAfter to tag photos from our wedding.</p>
 
-                <h4>How do I get to Secret Island for the activity day?</h4>
+                <h4>How do I get to Secret Island for the beach activity day?</h4>
 
                 <p>Please organize your own transportation to and from (there are no shuttles).
                     Park or get dropped off at the <a href="https://goo.gl/maps/tnBzYEboqDc9aVFr9">Secret Island parking area</a>. Parking is very limited so please carpool as much as possible.
