updated dress code

--- a/public/index.html
+++ b/public/index.html
@@ -765,9 +765,23 @@
                 <p>Please reply to your invitation by Thursday, November 21st, 2019</p>
 
                 <h4>When should we arrive?</h4>
-                <p>Plan to celebrate with us from Thursday, January 23rd through Saturday, January 25th, 2020.
+                <p>Plan to celebrate with us from Thursday, January 23rd through Saturday night, January 25th, 2020.
                     Family members, please arrive by Tuesday evening, January 21st.
                 </p>
+
+                <h4>What is the dress code?</h4>
+                <ul class="b-list">
+                    <li><b>Wedding:</b> Cocktail attire with a Hawaiian vibe.</li>
+                    <li><b>Family Day:</b> Island-casual. Think dresses, shorts,
+                        and comfortable shoes for walking.</li>
+                    <li><b>Welcome Party:</b> Island-casual. Hotel guests may want to jump in the pool too, so bring your swimsuit.</li>
+                    <li><b>Beach Activity Day:</b> Bring your towel, swim trunks and your flippy floppies to enjoy a day at the beach.
+                        There will be kayaking, boat rides, snorkeling, volleyball, ping pong, and of course, lounging.</li>
+                </ul>
+
+                <h4>Should I avoid any shoes at the wedding?</h4>
+                <p>The venue is outside in a grassy and slightly hilly area.
+                    Avoid wearing stilettos and other high heels. Remember we’ll be dancing =)</p>
 
                 <h4>Are children invited?</h4>
                 <p>Yes, children are invited. Please indicate attendance on the RSVP.
@@ -778,6 +792,9 @@
 
                 <p>Yes! We want parents to enjoy dinner and dancing and have arranged for babysitters where you can drop off your children for a break, nap, etc. We’ll also provide coloring books and crayons for your little ones.
                 </p>
+            </div>
+          
+            <div class="col-md-5 col-md-offset-1">
 
                 <h4>Will there be transportation to and from the wedding?</h4>
                 <p>Yes, we will organize shuttles to and from the wedding venue and after party.
@@ -792,23 +809,6 @@
                        <li>2:10 AM After party shuttle departs the Beach House Sports Bar & Grill for the hotel</li>
                    </ul>
                 </p>
-
-                <h4>What is the wedding dress code?</h4>
-                <p>Cocktail attire with a Hawaiian vibe.</p>
-
-                <h4>Should I avoid any shoes?</h4>
-                <p>The venue is outside in a grassy and slightly hilly area.
-                    Avoid wearing stilettos and other high heels. Remember we’ll be dancing =)</p>
-            </div>
-          
-            <div class="col-md-5 col-md-offset-1">
-                <h4>What is the Family Day dress code?</h4>
-                <p>Dress code for the day trip is island-casual. Think dresses, shorts,
-                    and comfortable shoes for walking.</p>
-
-                <h4>What is the Beach Activity Day dress code?</h4>
-                <p>Bring your towel, swim trunks and your flippy floppies to enjoy a day at the beach.
-                There will be kayaking, boat rides, snorkeling, volleyball, ping pong, and of course, lounging.</p>
 
                 <h4>Weather</h4>
                 <p>Oahu in January is very pleasant, with temperatures usually ranging
