updated re: activity day boats

--- a/public/index.html
+++ b/public/index.html
@@ -631,9 +631,11 @@
                         Vietnamese food for Lunar New Year, island fair, and
                         fun beach activities including swimming, kayaking, boat rides,
                         volleyball, and lounging.</p>
-                    <p>Beach Activity Day will be held at <a href="https://goo.gl/maps/YBdEFcTBpuUBSZRMA">Secret Island</a> at Kualoa Ranch. 
+
+                        <p><b>To attend the Beach Activity Day, you must pick up a wristband at the Welcome Party and bring it with you on Saturday. Do not lose your wristband!</b></p>
+                    <p>Beach Activity Day will be held at Secret Island at Kualoa Ranch. Park by the docks in this <a href="https://goo.gl/maps/YBdEFcTBpuUBSZRMA">parking lot</a>.
                         The island is available starting at 9 AM if you would
-                        like to get the party started early, but feel free to sleep in and join later as well. Hannah and Andrew will arrive around 11 AM.</p>
+                        like to get the party started early, but feel free to sleep in and join later as well. Hannah and Andrew will arrive around 11 AM. Boats will shuttle people back and forth between the docks and the island every 30 minutes.</p>
                 </div>
             </div>
         </div>
@@ -828,7 +830,7 @@
 
                 <p>Please organize your own transportation to and from (there are no shuttles).
                     Park or get dropped off at the <a href="https://goo.gl/maps/tnBzYEboqDc9aVFr9">Secret Island parking area</a>. Parking is very limited so please carpool as much as possible.
-                    Boats will take you from the parking area over to the island. We’ll update this site with the boat schedule as we get closer to the date.
+                    Boats will take you from the parking area over to the island every 30 minutes, starting at 9 AM, so please wait patiently for the next boat once you arrive.
                 </p>
             </div>
         </div>
